--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ag-grid-community/core": "^30.2.1",
+    "@ag-grid-community/styles": "^30.2.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
+    "ag-grid-react": "^30.2.1",
     "bcrypt": "^5.1.1",
+    "multi-range-slider-react": "^2.0.5",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "prisma": "^5.5.2",
