--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@ag-grid-community/core": "^30.2.1",
     "@ag-grid-community/styles": "^30.2.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "ag-grid-react": "^30.2.1",
