--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
